[gd_scene load_steps=14 format=2]

[ext_resource path="res://GUI/GUIClickPrompt.tres" type="Animation" id=1]
[ext_resource path="res://GUI/RadioMessage.gd" type="Script" id=2]
[ext_resource path="res://Assets/RadioReceiverSwitch.png" type="Texture" id=3]
[ext_resource path="res://Assets/input-prompts-pixel-16/Tilemap/tilemap_packed.png" type="Texture" id=4]
[ext_resource path="res://Assets/RadioReceiver.png" type="Texture" id=5]
[ext_resource path="res://Assets/RadioReceiverSpeaker.png" type="Texture" id=6]
[ext_resource path="res://Assets/GUI_set_01_v2_0/9-slice frames/frame1_c2.png" type="Texture" id=7]
[ext_resource path="res://Assets/kingthings-trypewriter-2/Kingthings Trypewriter 2.ttf" type="DynamicFontData" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 20, 18 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 128, 32, 16, 16 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=7]
resource_name = "IntroDialogAnimation"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RichTextLabel:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[node name="RadioMessage" type="Control"]
margin_right = 295.0
margin_bottom = 226.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 147.0
margin_bottom = 100.0
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="TextureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 55.5
margin_top = 37.0
margin_right = 55.5
margin_bottom = 37.0
texture = ExtResource( 6 )

[node name="Switch" type="TextureRect" parent="TextureButton"]
margin_top = 27.0
margin_right = 40.0
margin_bottom = 67.0
texture = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClickPrompt" type="TextureRect" parent="TextureButton"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.0
margin_top = -23.0
margin_right = 6.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 20, 20 )
texture = SubResource( 5 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="TextureButton"]
anims/GUIClickPrompt = ExtResource( 1 )

[node name="TossTarget" type="Control" parent="."]
margin_left = 165.0
margin_top = -911.0
margin_right = 205.0
margin_bottom = -871.0
rect_rotation = -34.727
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextItemTimer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="InputPromptDelay" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Dialog" type="NinePatchRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -10.0
margin_right = 240.0
margin_bottom = 138.0
texture = ExtResource( 7 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Dialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 7.0
margin_right = -7.0
margin_bottom = -7.0
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "This is a test for the dialogue system."
text = "This is a test for the dialogue system."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Dialog"]
anims/IntroDialogAnimation = SubResource( 7 )
anims/RESET = SubResource( 8 )

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="NextItemTimer" to="." method="_on_NextItemTimer_timeout"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="InputPromptDelay" to="." method="_on_InputPromptDelay_timeout"]
